Add web jars to project

--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     runtime('org.springframework.boot:spring-boot-devtools')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
+    compile('org.webjars:bootstrap:3.3.7-1')
+    compile('org.webjars:jquery:3.2.1')
+    compile('org.webjars:font-awesome:4.7.0')
 }
