--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,12 @@ group = 'com.thymeleafdemo'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -19,6 +25,8 @@ dependencies {
     runtime("org.springframework.boot:spring-boot-properties-migrator")
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
     compile('org.webjars:bootstrap:3.3.7-1')
